kubernetes/transaction_manager/overlays/gke/probes-patch.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mm-transaction-api
spec:
  template:
    spec:
      containers:
        - name: mm-transaction-api
          readinessProbe:
            httpGet:
              path: /api/health/readiness
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/health/liveness
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 10
          startupProbe:
            httpGet:
              path: /api/health/readiness
              port: 8080
              scheme: HTTP
            failureThreshold: 30
            periodSeconds: 10
