kubernetes/transaction_manager/overlays/gke/rollout-patch.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mm-transaction-api
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 2
