kubernetes/transaction_manager/overlays/gke/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mm-transaction-api-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "transaction-api-ip"
spec:
  defaultBackend:
    service:
      name: mm-transaction-api
      port:
        number: 8080
---
